# espresso-lens

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: beans.py  extractions.py  search.py
backend/app/core/: config.py  database.py  qdrant.py
backend/app/models/: __init__.py  bean.py  extraction.py  frame.py
backend/app/services/: video_processor.py
frontend/: Dockerfile.dev  next.config.js  package.json  tailwind.config.ts
frontend/src/: env.d.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/bean-database/: page.tsx
frontend/src/app/extraction-logs/: page.tsx
frontend/src/components/shared/: Footer.tsx  Header.tsx
frontend/src/lib/: utils.ts
frontend/src/styles/: globals.css
scripts/: generate_test_images.py  screenshot.js
