[project]
name = "espressolens-backend"
version = "0.1.0"
description = "FastAPI backend for EspressoLens extraction visual analysis and bean profile semantic search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlmodel>=0.0.19",
    "qdrant-client>=1.9.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "opencv-python-headless>=4.9.0.80",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []
